--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="success">
     <ion-title>
-      รัฐมนตรี
+      รัฐมนตรีไทย
     </ion-title>
   </ion-toolbar>
 </ion-header>
